force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Function__c/Function__c.object-meta.xml
<CustomObject>
    <label>Function Master</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Functions Master</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>