force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Function__c/fields/Benchmark_Rule__c.field-meta.xml
<CustomField>
    <fullName>Benchmark_Rule__c</fullName>
    <label>Benchmark Rule</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>