force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Function__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Auth Classification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct OTS</fullName>
            </value>
            <value>
                <fullName>Indirect OTS</fullName>
            </value>
            <value>
                <fullName>Indirect Skilled</fullName>
            </value>
            <value>
                <fullName>Salaried</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>