force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Function__c/fields/Core_Area_Harbour_view__c.field-meta.xml
<CustomField>
    <fullName>Core_Area_Harbour_view__c</fullName>
    <label>Core Area (Harbour view)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>- Empty</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>CSS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>