force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Function__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Cost of</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CoSup</fullName>
            </value>
            <value>
                <fullName>CoM</fullName>
            </value>
            <value>
                <fullName>CoQ</fullName>
            </value>
            <value>
                <fullName>CoP</fullName>
            </value>
            <value>
                <fullName>CoLog</fullName>
            </value>
            <value>
                <fullName>CoCSS</fullName>
            </value>
            <value>
                <fullName>CoLaunch</fullName>
            </value>
            <value>
                <fullName>- Empty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>