force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Function__c/fields/Current_GWB_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_GWB_ID__c</fullName>
    <label>Current GWB ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>