force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Function__c/fields/Function_Level__c.field-meta.xml
<CustomField>
    <fullName>Function_Level__c</fullName>
    <label>Function Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01 - Director</fullName>
            </value>
            <value>
                <fullName>02 - Area Manager</fullName>
            </value>
            <value>
                <fullName>03 - Shift Leader</fullName>
            </value>
            <value>
                <fullName>04 - Group Leader</fullName>
            </value>
            <value>
                <fullName>05 - Maint. Shift Leader</fullName>
            </value>
            <value>
                <fullName>06 - Maint. Group Leader</fullName>
            </value>
            <value>
                <fullName>07 - Lead Engineer</fullName>
            </value>
            <value>
                <fullName>08 - Engineer/Technician</fullName>
            </value>
            <value>
                <fullName>09 - Analyst</fullName>
            </value>
            <value>
                <fullName>10 - Team Leader</fullName>
            </value>
            <value>
                <fullName>11 - Maint. Team Leader</fullName>
            </value>
            <value>
                <fullName>12 - Core Team</fullName>
            </value>
            <value>
                <fullName>13 - Maint. Team Member</fullName>
            </value>
            <value>
                <fullName>14 - Team Member</fullName>
            </value>
            <value>
                <fullName>15 - Tag Relief</fullName>
            </value>
            <value>
                <fullName>16 - ARO</fullName>
            </value>
            <value>
                <fullName>17 - VRO</fullName>
            </value>
            <value>
                <fullName>- Empty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>