force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Function__c/fields/GMNA_Shop_SD_view__c.field-meta.xml
<CustomField>
    <fullName>GMNA_Shop_SD_view__c</fullName>
    <label>GMNA Shop (SD view)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shop_SD_view</valueSetName>
    </valueSet>
</CustomField>