force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Function__c/fields/Included_in_Auth_Plan_of_Record__c.field-meta.xml
<CustomField>
    <fullName>Included_in_Auth_Plan_of_Record__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>