force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Function__c/fields/MFG_Sub_Function__c.field-meta.xml
<CustomField>
    <fullName>MFG_Sub_Function__c</fullName>
    <label>MFG Sub-Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>