force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Function__c/fields/Shop_Master_View__c.field-meta.xml
<CustomField>
    <fullName>Shop_Master_View__c</fullName>
    <label>Shop (Master View)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Shop_Master_Shop</valueSetName>
    </valueSet>
</CustomField>