force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Function__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Current_GWB_ID__c</columns>
    <columns>Auth_Sector__c</columns>
    <columns>Function_Level__c</columns>
    <columns>Classification__c</columns>
    <columns>Functional_Area__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Base_Supp__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>